--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,16 @@
+* {
+	margin: 0;
+	padding: 0;
+}
 
+body {
+	background-color: #262626;
+	color: white;
+}
+
+.header {
+	width: 100%;
+	height: 100vh;
+	background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(../images/bg.jpeg) center no-repeat;
+	background-size: cover;
+}
