--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,1 +1,15 @@
 // file for defining variables, mixins, reset styles, etc.
+
+// variables for colors
+$color-dark: #262626;
+$color-black: #000;
+
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	background-color: $color-dark;
+	color: white;
+}
