--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,1 +1,8 @@
 // file for defining styles for layouts
+
+.header {
+	width: 100%;
+	height: 100vh;
+	background: linear-gradient(rgba($color-black, .8), rgba($color-black, .6)), url(../images/bg.jpeg) center no-repeat;
+	background-size: cover;
+}
