styled logo in header

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,6 +3,14 @@
 // variables for colors
 $color-dark: #262626;
 $color-black: #000;
+$color-primary: #d3ab55;
+
+// mixins
+@mixin flexLayout {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 * {
 	margin: 0;
