--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,28 @@ body {
 .header {
 	width: 100%;
 	height: 100vh;
+	position: relative;
 	background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(../images/bg.jpeg) center no-repeat;
 	background-size: cover;
+}
+.header .brand {
+	position: absolute;
+	top: 15%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: flex;
+	align-items: center;
+}
+
+.logo {
+	font-size: 70px;
+	color: #d3ab55;
+	display: block;
+	width: 110px;
+	height: 110px;
+	border: 3px solid #d3ab55;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
