--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,1 +1,12 @@
 // file for styles for reusable components
+
+.logo {
+	font-size: 70px;
+	color: $color-primary;
+	display: block;
+	width: 110px;
+	height: 110px;
+	border: 3px solid $color-primary;
+	border-radius: 50%;
+	@include flexLayout;
+}
