--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,6 +3,16 @@
 .header {
 	width: 100%;
 	height: 100vh;
+	position: relative;
 	background: linear-gradient(rgba($color-black, .8), rgba($color-black, .6)), url(../images/bg.jpeg) center no-repeat;
 	background-size: cover;
+
+	.brand {
+		position: absolute;
+		top: 15%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		display: flex;
+		align-items: center;
+	}
 }
