--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -8,5 +8,17 @@
 	height: 110px;
 	border: 3px solid $color-primary;
 	border-radius: 50%;
+	margin-right: 20px;
 	@include flexLayout;
+}
+
+.main-name {
+	color: $color-secondary;
+	@include textStyles($font-nunito, 50px);
+}
+
+.sub-name {
+	color: $color-secondary;
+	text-align: center;
+	@include textStyles($font-josefinSans, 18px);
 }
