--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,13 @@ body {
 	display: flex;
 	align-items: center;
 }
+.header-banner {
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 
 .logo {
 	font-size: 70px;
@@ -55,4 +62,20 @@ body {
 	font-weight: 300;
 	letter-spacing: 2px;
 	text-transform: uppercase;
+}
+
+.main-heading {
+	font-weight: 300;
+	font-family: "Dancing Script", cursive;
+	font-size: 100px;
+	color: #d3ab55;
+	margin-bottom: 40px;
+}
+
+.sub-heading {
+	font-weight: 300;
+	font-family: "Josefin Sans", sans-serif;
+	font-size: 60px;
+	color: #bbb;
+	margin-bottom: 80px;
 }
