--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@
 
 body {
 	background-color: #262626;
-	color: white;
 }
 
 .header {
@@ -78,4 +77,23 @@ body {
 	font-size: 60px;
 	color: #bbb;
 	margin-bottom: 80px;
+}
+
+.main-btn {
+	width: 170px;
+	height: 45px;
+	font-family: "Josefin Sans", sans-serif;
+	font-size: 14px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	color: #d3ab55;
+	background-color: transparent;
+	border: 1px solid #d3ab55;
+	outline: none;
+	cursor: pointer;
+	transition: all .4s;
+}
+.main-btn:hover {
+	background-color: #d3ab55;
+	color: #262626;
 }
