--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -32,3 +32,23 @@
 	font-weight: 300;
 	@include headingStyles($font-josefinSans, 60px, $color-secondary, 80px);
 }
+
+.main-btn {
+	width: 170px;
+	height: 45px;
+	font-family: "Josefin Sans", sans-serif;
+	font-size: 14px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	color: $color-primary;
+	background-color: transparent;
+	border: 1px solid $color-primary;
+	outline: none;
+	cursor: pointer;
+	transition: all .4s;
+
+	&:hover {
+		background-color: $color-primary;
+		color: $color-dark;
+	}
+}
