styled section on right in about us section

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,29 @@ body {
 }
 .about-us-right {
 	width: 60%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 0 100px;
+	box-sizing: border-box;
+}
+.about-us-right .stars {
+	margin: 30px 0;
+}
+.about-us-right .star {
+	font-size: 15px;
+	color: #d3ab55;
+	margin-left: 10px;
+}
+.about-us-right .description {
+	font-family: "Josefin Sans", sans-serif;
+	font-size: 25px;
+	font-style: italic;
+	color: #bbb;
+	text-align: justify;
+}
+.about-us-right .description::first-letter {
+	padding-left: 50px;
 }
 
 .logo {
