--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,11 @@ body {
 	padding-left: 50px;
 }
 
+.gallery .cards-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+}
+
 .logo {
 	font-size: 70px;
 	color: #d3ab55;
@@ -137,4 +142,15 @@ body {
 .main-btn:hover {
 	background-color: #d3ab55;
 	color: #262626;
+}
+
+.card {
+	width: 33.3333%;
+	height: 30vw;
+}
+.card-img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	opacity: .5;
 }
