--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -52,3 +52,15 @@
 		color: $color-dark;
 	}
 }
+
+.card {
+	width: 33.3333%;
+	height: 30vw;
+
+	&-img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		opacity: .5;
+	}
+}
