--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+.card-img,
+.card-overlay {
+	width: 100%;
+	height: 100%;
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -147,10 +153,21 @@ body {
 .card {
 	width: 33.3333%;
 	height: 30vw;
+	position: relative;
 }
 .card-img {
-	width: 100%;
-	height: 100%;
 	object-fit: cover;
 	opacity: .5;
+}
+.card-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: rgba(211, 171, 85, 0.6);
+	color: #fff;
+	z-index: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
