--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,6 +3,7 @@
 // variables for colors
 $color-dark: #262626;
 $color-black: #000;
+$color-white: #fff;
 $color-primary: #d3ab55;
 $color-secondary: #bbb;
 
@@ -38,6 +39,11 @@ $font-nunito: "Nunito", sans-serif;
 	font-size: $fontSize;
 	color: $color;
 	margin-bottom: $marginBottom;
+}
+
+%fullSpace {
+	width: 100%;
+	height: 100%;
 }
 
 * {
