--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -56,11 +56,23 @@
 .card {
 	width: 33.3333%;
 	height: 30vw;
+	position: relative;
 
 	&-img {
-		width: 100%;
-		height: 100%;
 		object-fit: cover;
 		opacity: .5;
+		@extend %fullSpace;
+	}
+
+	&-overlay {
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-color: rgba($color-primary, .6);
+		color: $color-white;
+		z-index: 1;
+		@include flexLayout;
+		flex-direction: column;
+		@extend %fullSpace;
 	}
 }
