--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,47 @@ body {
 	background-color: #262626;
 }
 
+.navbar {
+	position: relative;
+	z-index: 1;
+}
+.navbar-navigation {
+	display: flex;
+}
+.navbar-navigation-left {
+	width: 50vw;
+	height: 100vh;
+	background-color: #262626;
+	position: fixed;
+	left: 0;
+}
+.navbar-navigation-left .left-img {
+	width: 50%;
+	position: absolute;
+	box-shadow: 0 15px 60px rgba(0, 0, 0, 0.4);
+	opacity: .7;
+	border-radius: 10px;
+}
+.navbar-navigation-left .left-img-1 {
+	top: 15%;
+	left: 15%;
+}
+.navbar-navigation-left .left-img-2 {
+	top: 35%;
+	left: 25%;
+}
+.navbar-navigation-left .left-img-3 {
+	top: 55%;
+	left: 35%;
+}
+.navbar-navigation-right {
+	width: 50vw;
+	height: 100vh;
+	background-color: #1f1d1d;
+	position: fixed;
+	right: 0;
+}
+
 .header {
 	width: 100%;
 	height: 100vh;
