--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,5 +1,53 @@
 // file for defining styles for layouts
 
+.navbar {
+	position: relative;
+	z-index: 1;
+
+	&-navigation {
+		display: flex;
+
+		&-left {
+			width: 50vw;
+			height: 100vh;
+			background-color: $color-dark;
+			position: fixed;
+			left: 0;
+
+			.left-img {
+				width: 50%;
+				position: absolute;
+				box-shadow: 0 15px 60px rgba($color-black, .4);
+				opacity: .7;
+				border-radius: 10px;
+			}
+
+			.left-img-1 {
+				top: 15%;
+				left: 15%;
+			}
+
+			.left-img-2 {
+				top: 35%;
+				left: 25%;
+			}
+
+			.left-img-3 {
+				top: 55%;
+				left: 35%;
+			}
+		}
+
+		&-right {
+			width: 50vw;
+			height: 100vh;
+			background-color: #1f1d1d;
+			position: fixed;
+			right: 0;
+		}
+	}
+}
+
 .header {
 	width: 100%;
 	height: 100vh;
