--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+.hamburger-menu .menu,
 .card-img,
 .card-overlay {
 	width: 100%;
@@ -25,7 +26,7 @@ body {
 	height: 100vh;
 	background-color: #262626;
 	position: fixed;
-	left: 0;
+	left: -50vw;
 }
 .navbar-navigation-left .left-img {
 	width: 50%;
@@ -51,7 +52,7 @@ body {
 	height: 100vh;
 	background-color: #1f1d1d;
 	position: fixed;
-	right: 0;
+	right: -50vw;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -180,6 +181,25 @@ body {
 	letter-spacing: 0;
 	text-transform: capitalize;
 	color: #bbb;
+}
+
+.hamburger-menu {
+	width: 40px;
+	height: 40px;
+	position: fixed;
+	top: 10%;
+	right: 5%;
+}
+.hamburger-menu .menu {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	cursor: pointer;
+}
+.hamburger-menu .menu-line {
+	width: 100%;
+	height: 4px;
+	background-color: #d3ab55;
 }
 
 .logo {
