--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -12,7 +12,7 @@
 			height: 100vh;
 			background-color: $color-dark;
 			position: fixed;
-			left: 0;
+			left: -50vw;
 
 			.left-img {
 				width: 50%;
@@ -43,7 +43,7 @@
 			height: 100vh;
 			background-color: #1f1d1d;
 			position: fixed;
-			right: 0;
+			right: -50vw;
 			@include flexLayout;
 
 			.nav-list {
