styled hamburger menu icon to show/hide navigation menu on click

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -13,6 +13,7 @@
 			background-color: $color-dark;
 			position: fixed;
 			left: -50vw;
+			transition: left .8s cubic-bezier(1, 0, 0, 1);
 
 			.left-img {
 				width: 50%;
@@ -45,6 +46,7 @@
 			position: fixed;
 			right: -50vw;
 			@include flexLayout;
+			transition: right .8s cubic-bezier(1, 0, 0, 1);
 
 			.nav-list {
 				&-item {
@@ -68,6 +70,30 @@
 			}
 		}
 	}
+}
+
+.checkbox:checked ~ .navbar-navigation .navbar-navigation-left {
+	left: 0;
+}
+
+.checkbox:checked ~ .navbar-navigation .navbar-navigation-right {
+	right: 0;
+}
+
+.checkbox:checked ~ .hamburger-menu .menu {
+	transform: rotateZ(90deg);
+}
+
+.checkbox:checked ~ .hamburger-menu .menu-line-1 {
+	transform: rotateZ(-40deg);
+}
+
+.checkbox:checked ~ .hamburger-menu .menu-line-2 {
+	opacity: 0;
+}
+
+.checkbox:checked ~ .hamburger-menu .menu-line-3 {
+	transform: rotateZ(40deg);
 }
 
 .header {
