--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
 	background-color: #262626;
 	position: fixed;
 	left: -50vw;
+	transition: left 0.8s cubic-bezier(1, 0, 0, 1);
 }
 .navbar-navigation-left .left-img {
 	width: 50%;
@@ -56,6 +57,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	transition: right 0.8s cubic-bezier(1, 0, 0, 1);
 }
 .navbar-navigation-right .nav-list-item {
 	list-style: none;
@@ -76,6 +78,30 @@ body {
 .navbar-navigation-right .nav-list-link:hover {
 	color: #d3ab55;
 	letter-spacing: 4px;
+}
+
+.checkbox:checked ~ .navbar-navigation .navbar-navigation-left {
+	left: 0;
+}
+
+.checkbox:checked ~ .navbar-navigation .navbar-navigation-right {
+	right: 0;
+}
+
+.checkbox:checked ~ .hamburger-menu .menu {
+	transform: rotateZ(90deg);
+}
+
+.checkbox:checked ~ .hamburger-menu .menu-line-1 {
+	transform: rotateZ(-40deg);
+}
+
+.checkbox:checked ~ .hamburger-menu .menu-line-2 {
+	opacity: 0;
+}
+
+.checkbox:checked ~ .hamburger-menu .menu-line-3 {
+	transform: rotateZ(40deg);
 }
 
 .header {
@@ -189,17 +215,21 @@ body {
 	position: fixed;
 	top: 10%;
 	right: 5%;
+	z-index: 2;
 }
 .hamburger-menu .menu {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	cursor: pointer;
+	transition: transform .5s;
 }
 .hamburger-menu .menu-line {
 	width: 100%;
 	height: 4px;
 	background-color: #d3ab55;
+	transform-origin: right;
+	transition: all .5s .5s;
 }
 
 .logo {
