--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -6,6 +6,7 @@
 	position: fixed;
 	top: 10%;
 	right: 5%;
+	z-index: 2;
 
 	.menu {
 		@extend %fullSpace;
@@ -13,11 +14,14 @@
 		flex-direction: column;
 		justify-content: space-around;
 		cursor: pointer;
+		transition: transform .5s;
 
 		&-line {
 			width: 100%;
 			height: 4px;
 			background-color: $color-primary;
+			transform-origin: right;
+			transition: all .5s .5s;
 		}
 	}
 }
