made webpage responsive - part 1

--- a/css/main.css
+++ b/css/main.css
@@ -132,10 +132,20 @@ body {
 	display: flex;
 	align-items: center;
 }
+@media (max-width: 900px) {
+	.about-us {
+		height: 70vh;
+	}
+}
 .about-us-left {
 	width: 40%;
 	position: relative;
 	left: -200px;
+}
+@media (max-width: 1300px) {
+	.about-us-left {
+		left: -150px;
+	}
 }
 .about-us-left img {
 	width: 100%;
@@ -149,13 +159,28 @@ body {
 	padding: 0 100px;
 	box-sizing: border-box;
 }
+@media (max-width: 1300px) {
+	.about-us-right {
+		padding: 0 50px;
+	}
+}
 .about-us-right .stars {
 	margin: 30px 0;
+}
+@media (max-width: 1000px) {
+	.about-us-right .stars {
+		margin: 15px 0;
+	}
 }
 .about-us-right .star {
 	font-size: 15px;
 	color: #d3ab55;
 	margin-left: 10px;
+}
+@media (max-width: 1000px) {
+	.about-us-right .star {
+		font-size: 12px;
+	}
 }
 .about-us-right .description {
 	font-family: "Josefin Sans", sans-serif;
@@ -166,6 +191,16 @@ body {
 }
 .about-us-right .description::first-letter {
 	padding-left: 50px;
+}
+@media (max-width: 1600px) {
+	.about-us-right .description {
+		font-size: 18px;
+	}
+}
+@media (max-width: 1000px) {
+	.about-us-right .description {
+		font-size: 14px;
+	}
 }
 
 .gallery .cards-wrapper {
@@ -199,6 +234,11 @@ body {
 }
 .footer .social-media-item:hover {
 	color: #d3ab55;
+}
+@media (max-width: 1000px) {
+	.footer .social-media-item {
+		font-size: 35px;
+	}
 }
 .footer-copyright-paragraph {
 	font-family: "Josefin Sans", sans-serif;
@@ -241,9 +281,17 @@ body {
 	border: 3px solid #d3ab55;
 	border-radius: 50%;
 	margin-right: 20px;
+	text-decoration: none;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+@media (max-width: 1000px) {
+	.logo {
+		font-size: 50px;
+		width: 90px;
+		height: 90px;
+	}
 }
 
 .main-name {
@@ -253,6 +301,11 @@ body {
 	font-weight: 300;
 	letter-spacing: 2px;
 	text-transform: uppercase;
+}
+@media (max-width: 1000px) {
+	.main-name {
+		font-size: 40px;
+	}
 }
 
 .sub-name {
@@ -272,6 +325,16 @@ body {
 	color: #d3ab55;
 	margin-bottom: 40px;
 }
+@media (max-width: 1600px) {
+	.main-heading {
+		font-size: 80px;
+	}
+}
+@media (max-width: 1000px) {
+	.main-heading {
+		font-size: 60px;
+	}
+}
 
 .sub-heading {
 	font-weight: 300;
@@ -279,6 +342,23 @@ body {
 	font-size: 60px;
 	color: #bbb;
 	margin-bottom: 80px;
+}
+@media (max-width: 1600px) {
+	.sub-heading {
+		font-size: 50px;
+		margin-bottom: 50px;
+	}
+}
+@media (max-width: 1300px) {
+	.sub-heading {
+		font-size: 40px;
+		margin-bottom: 30px;
+	}
+}
+@media (max-width: 1000px) {
+	.sub-heading {
+		font-size: 30px;
+	}
 }
 
 .main-btn {
@@ -330,6 +410,11 @@ body {
 	letter-spacing: 2px;
 	text-transform: capitalize;
 }
+@media (max-width: 900px) {
+	.card-overlay-heading {
+		font-size: 35px;
+	}
+}
 .card-overlay-paragraph {
 	font-family: "Josefin Sans", sans-serif;
 	font-size: 30px;
@@ -337,6 +422,11 @@ body {
 	letter-spacing: 2px;
 	text-transform: capitalize;
 	margin-bottom: 30px;
+}
+@media (max-width: 900px) {
+	.card-overlay-paragraph {
+		font-size: 25px;
+	}
 }
 .card-overlay-btn {
 	width: 150px;
@@ -352,6 +442,13 @@ body {
 	border-radius: 30px;
 	outline: none;
 	cursor: pointer;
+}
+@media (max-width: 900px) {
+	.card-overlay-btn {
+		font-size: 12px;
+		width: 130px;
+		height: 30px;
+	}
 }
 .card:hover .card-overlay {
 	left: 0;
