--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -35,12 +35,23 @@
 	border: 3px solid $color-primary;
 	border-radius: 50%;
 	margin-right: 20px;
+	text-decoration: none;
 	@include flexLayout;
+
+	@media (max-width: 1000px) {
+		font-size: 50px;
+		width: 90px;
+		height: 90px;
+	}
 }
 
 .main-name {
 	color: $color-secondary;
 	@include textStyles($font-nunito, 50px, 300, 2px, uppercase);
+
+	@media (max-width: 1000px) {
+		font-size: 40px;
+	}
 }
 
 .sub-name {
@@ -52,11 +63,33 @@
 .main-heading {
 	font-weight: 300;
 	@include headingStyles($font-dancingScript, 100px, $color-primary, 40px);
+
+	@media (max-width: 1600px) {
+		font-size: 80px;
+	}
+
+	@media (max-width: 1000px) {
+		font-size: 60px;
+	}
 }
 
 .sub-heading {
 	font-weight: 300;
 	@include headingStyles($font-josefinSans, 60px, $color-secondary, 80px);
+
+	@media (max-width: 1600px) {
+		font-size: 50px;
+		margin-bottom: 50px;
+	}
+
+	@media (max-width: 1300px) {
+		font-size: 40px;
+		margin-bottom: 30px;
+	}
+
+	@media (max-width: 1000px) {
+		font-size: 30px;
+	}
 }
 
 .main-btn {
@@ -105,11 +138,19 @@
 
 		&-heading {
 			@include textStyles($font-nunito, 50px, 300, 2px, capitalize);
+
+			@media (max-width: 900px) {
+				font-size: 35px;
+			}
 		}
 
 		&-paragraph {
 			@include textStyles($font-josefinSans, 30px, 300, 2px, capitalize);
 			margin-bottom: 30px;
+
+			@media (max-width: 900px) {
+				font-size: 25px;
+			}
 		}
 
 		&-btn {
@@ -122,6 +163,12 @@
 			border-radius: 30px;
 			outline: none;
 			cursor: pointer;
+
+			@media (max-width: 900px) {
+				font-size: 12px;
+				width: 130px;
+				height: 30px;
+			}
 		}
 	}
 
