made webpage responsive - part 2

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -107,6 +107,10 @@
 		display: flex;
 		align-items: center;
 		@include centering(15%);
+
+		@media (max-width: 500px) {
+			@include centering(12%);
+		}
 	}
 
 	&-banner {
@@ -133,6 +137,10 @@
 			left: -150px;
 		}
 
+		@media (max-width: 800px) {
+			display: none;
+		}
+
 		img {
 			width: 100%;
 			opacity: .7;
@@ -149,6 +157,10 @@
 
 		@media (max-width: 1300px) {
 			padding: 0 50px;
+		}
+
+		@media (max-width: 800px) {
+			width: 100%;
 		}
 
 		.stars {
@@ -187,6 +199,10 @@
 			@media (max-width: 1000px) {
 				font-size: 14px;
 			}
+
+			@media (max-width: 500px) {
+				font-size: 12px;
+			}
 		}
 	}
 }
@@ -203,6 +219,10 @@
 	@include flexLayout;
 	flex-direction: column;
 
+	@media (max-width: 500px) {
+		padding: 40px 0;
+	}
+
 	&-header {
 		display: flex;
 		align-items: center;
@@ -215,11 +235,17 @@
 		justify-content: space-between;
 		margin-bottom: 40px;
 
+		@media (max-width: 500px) {
+			width: 200px;
+			margin-bottom: 40px;
+		}
+
 		&-item {
 			list-style: none;
 			font-size: 50px;
 			color: $color-secondary;
 			transition: color .7s;
+			text-decoration: none;
 
 			&:hover {
 				color: $color-primary;
@@ -228,11 +254,25 @@
 			@media (max-width: 1000px) {
 				font-size: 35px;
 			}
+
+			@media (max-width: 500px) {
+				font-size: 25px;
+			}
 		}
 	}
 
 	&-copyright-paragraph {
 		@include textStyles($font-josefinSans, 18px, 500, 0, capitalize);
 		color: $color-secondary;
+
+		@media (max-width: 800px) {
+			width: 70%;
+			margin: auto;
+			text-align: center;
+		}
+
+		@media (max-width: 1000px) {
+			font-size: 14px;
+		}
 	}
 }
