--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,14 @@ body {
 	display: flex;
 	align-items: center;
 }
+@media (max-width: 500px) {
+	.header .brand {
+		position: absolute;
+		top: 12%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+}
 .header-banner {
 	text-align: center;
 	position: absolute;
@@ -147,6 +155,11 @@ body {
 		left: -150px;
 	}
 }
+@media (max-width: 800px) {
+	.about-us-left {
+		display: none;
+	}
+}
 .about-us-left img {
 	width: 100%;
 	opacity: .7;
@@ -162,6 +175,11 @@ body {
 @media (max-width: 1300px) {
 	.about-us-right {
 		padding: 0 50px;
+	}
+}
+@media (max-width: 800px) {
+	.about-us-right {
+		width: 100%;
 	}
 }
 .about-us-right .stars {
@@ -202,6 +220,11 @@ body {
 		font-size: 14px;
 	}
 }
+@media (max-width: 500px) {
+	.about-us-right .description {
+		font-size: 12px;
+	}
+}
 
 .gallery .cards-wrapper {
 	display: flex;
@@ -215,6 +238,11 @@ body {
 	align-items: center;
 	flex-direction: column;
 }
+@media (max-width: 500px) {
+	.footer {
+		padding: 40px 0;
+	}
+}
 .footer-header {
 	display: flex;
 	align-items: center;
@@ -226,11 +254,18 @@ body {
 	justify-content: space-between;
 	margin-bottom: 40px;
 }
+@media (max-width: 500px) {
+	.footer .social-media {
+		width: 200px;
+		margin-bottom: 40px;
+	}
+}
 .footer .social-media-item {
 	list-style: none;
 	font-size: 50px;
 	color: #bbb;
 	transition: color .7s;
+	text-decoration: none;
 }
 .footer .social-media-item:hover {
 	color: #d3ab55;
@@ -238,6 +273,11 @@ body {
 @media (max-width: 1000px) {
 	.footer .social-media-item {
 		font-size: 35px;
+	}
+}
+@media (max-width: 500px) {
+	.footer .social-media-item {
+		font-size: 25px;
 	}
 }
 .footer-copyright-paragraph {
@@ -248,6 +288,18 @@ body {
 	text-transform: capitalize;
 	color: #bbb;
 }
+@media (max-width: 800px) {
+	.footer-copyright-paragraph {
+		width: 70%;
+		margin: auto;
+		text-align: center;
+	}
+}
+@media (max-width: 1000px) {
+	.footer-copyright-paragraph {
+		font-size: 14px;
+	}
+}
 
 .hamburger-menu {
 	width: 40px;
@@ -256,6 +308,18 @@ body {
 	top: 10%;
 	right: 5%;
 	z-index: 2;
+}
+@media (max-width: 800px) {
+	.hamburger-menu {
+		width: 35px;
+		height: 35px;
+	}
+}
+@media (max-width: 500px) {
+	.hamburger-menu {
+		width: 25px;
+		height: 25px;
+	}
 }
 .hamburger-menu .menu {
 	display: flex;
@@ -270,6 +334,16 @@ body {
 	background-color: #d3ab55;
 	transform-origin: right;
 	transition: all .5s .5s;
+}
+@media (max-width: 800px) {
+	.hamburger-menu .menu-line {
+		height: 3px;
+	}
+}
+@media (max-width: 500px) {
+	.hamburger-menu .menu-line {
+		height: 2px;
+	}
 }
 
 .logo {
@@ -293,6 +367,14 @@ body {
 		height: 90px;
 	}
 }
+@media (max-width: 500px) {
+	.logo {
+		font-size: 30px;
+		width: 50px;
+		height: 50px;
+		border-width: 2px;
+	}
+}
 
 .main-name {
 	color: #bbb;
@@ -307,6 +389,12 @@ body {
 		font-size: 40px;
 	}
 }
+@media (max-width: 500px) {
+	.main-name {
+		font-size: 20px;
+		text-align: center;
+	}
+}
 
 .sub-name {
 	color: #bbb;
@@ -316,6 +404,12 @@ body {
 	font-weight: 300;
 	letter-spacing: 2px;
 	text-transform: uppercase;
+}
+@media (max-width: 500px) {
+	.sub-name {
+		font-size: 12px;
+		text-align: center;
+	}
 }
 
 .main-heading {
@@ -333,6 +427,12 @@ body {
 @media (max-width: 1000px) {
 	.main-heading {
 		font-size: 60px;
+	}
+}
+@media (max-width: 500px) {
+	.main-heading {
+		font-size: 40px;
+		margin-bottom: 20px;
 	}
 }
 
@@ -360,6 +460,12 @@ body {
 		font-size: 30px;
 	}
 }
+@media (max-width: 500px) {
+	.sub-heading {
+		font-size: 20px;
+		margin-bottom: 10px;
+	}
+}
 
 .main-btn {
 	width: 170px;
@@ -378,6 +484,20 @@ body {
 .main-btn:hover {
 	background-color: #d3ab55;
 	color: #262626;
+}
+@media (max-width: 800px) {
+	.main-btn {
+		width: 150px;
+		height: 35px;
+		font-size: 12px;
+	}
+}
+@media (max-width: 500px) {
+	.main-btn {
+		width: 130px;
+		height: 30px;
+		font-size: 10px;
+	}
 }
 
 .card {
@@ -415,6 +535,16 @@ body {
 		font-size: 35px;
 	}
 }
+@media (max-width: 650px) {
+	.card-overlay-heading {
+		font-size: 25px;
+	}
+}
+@media (max-width: 500px) {
+	.card-overlay-heading {
+		display: none;
+	}
+}
 .card-overlay-paragraph {
 	font-family: "Josefin Sans", sans-serif;
 	font-size: 30px;
@@ -426,6 +556,16 @@ body {
 @media (max-width: 900px) {
 	.card-overlay-paragraph {
 		font-size: 25px;
+	}
+}
+@media (max-width: 650px) {
+	.card-overlay-paragraph {
+		font-size: 15px;
+	}
+}
+@media (max-width: 500px) {
+	.card-overlay-paragraph {
+		display: none;
 	}
 }
 .card-overlay-btn {
@@ -447,6 +587,13 @@ body {
 	.card-overlay-btn {
 		font-size: 12px;
 		width: 130px;
+		height: 30px;
+	}
+}
+@media (max-width: 650px) {
+	.card-overlay-btn {
+		font-size: 10px;
+		width: 100px;
 		height: 30px;
 	}
 }
