--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -8,6 +8,16 @@
 	right: 5%;
 	z-index: 2;
 
+	@media (max-width: 800px) {
+		width: 35px;
+		height: 35px;
+	}
+
+	@media (max-width: 500px) {
+		width: 25px;
+		height: 25px;
+	}
+
 	.menu {
 		@extend %fullSpace;
 		display: flex;
@@ -22,6 +32,14 @@
 			background-color: $color-primary;
 			transform-origin: right;
 			transition: all .5s .5s;
+
+			@media (max-width: 800px) {
+				height: 3px;
+			}
+
+			@media (max-width: 500px) {
+				height: 2px;
+			}
 		}
 	}
 }
@@ -43,6 +61,13 @@
 		width: 90px;
 		height: 90px;
 	}
+
+	@media (max-width: 500px) {
+		font-size: 30px;
+		width: 50px;
+		height: 50px;
+		border-width: 2px;
+	}
 }
 
 .main-name {
@@ -52,12 +77,22 @@
 	@media (max-width: 1000px) {
 		font-size: 40px;
 	}
+
+	@media (max-width: 500px) {
+		font-size: 20px;
+		text-align: center;
+	}
 }
 
 .sub-name {
 	color: $color-secondary;
 	text-align: center;
 	@include textStyles($font-josefinSans, 18px, 300, 2px, uppercase);
+
+	@media (max-width: 500px) {
+		font-size: 12px;
+		text-align: center;
+	}
 }
 
 .main-heading {
@@ -70,6 +105,11 @@
 
 	@media (max-width: 1000px) {
 		font-size: 60px;
+	}
+
+	@media (max-width: 500px) {
+		font-size: 40px;
+		margin-bottom: 20px;
 	}
 }
 
@@ -90,6 +130,11 @@
 	@media (max-width: 1000px) {
 		font-size: 30px;
 	}
+
+	@media (max-width: 500px) {
+		font-size: 20px;
+		margin-bottom: 10px;
+	}
 }
 
 .main-btn {
@@ -109,6 +154,18 @@
 	&:hover {
 		background-color: $color-primary;
 		color: $color-dark;
+	}
+
+	@media (max-width: 800px) {
+		width: 150px;
+		height: 35px;
+		font-size: 12px;
+	}
+
+	@media (max-width: 500px) {
+		width: 130px;
+		height: 30px;
+		font-size: 10px;
 	}
 }
 
@@ -142,6 +199,14 @@
 			@media (max-width: 900px) {
 				font-size: 35px;
 			}
+
+			@media (max-width: 650px) {
+				font-size: 25px;
+			}
+
+			@media (max-width: 500px) {
+				display: none;
+			}
 		}
 
 		&-paragraph {
@@ -150,6 +215,14 @@
 
 			@media (max-width: 900px) {
 				font-size: 25px;
+			}
+
+			@media (max-width: 650px) {
+				font-size: 15px;
+			}
+
+			@media (max-width: 500px) {
+				display: none;
 			}
 		}
 
@@ -167,6 +240,12 @@
 			@media (max-width: 900px) {
 				font-size: 12px;
 				width: 130px;
+				height: 30px;
+			}
+
+			@media (max-width: 650px) {
+				font-size: 10px;
+				width: 100px;
 				height: 30px;
 			}
 		}
