--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -15,27 +15,51 @@
 			left: -50vw;
 			transition: left .8s cubic-bezier(1, 0, 0, 1);
 
+			@media (max-width: 800px) {
+				display: none;
+			}
+
 			.left-img {
 				width: 50%;
 				position: absolute;
 				box-shadow: 0 15px 60px rgba($color-black, .4);
 				opacity: .7;
 				border-radius: 10px;
+
+				@media (max-width: 1300px) {
+					width: 55%;
+				}
+
+				@media (max-width: 1000px) {
+					width: 65%;
+				}
 			}
 
 			.left-img-1 {
 				top: 15%;
 				left: 15%;
+
+				@media (max-width: 1000px) {
+					left: 5%;
+				}
 			}
 
 			.left-img-2 {
 				top: 35%;
 				left: 25%;
+
+				@media (max-width: 1000px) {
+					left: 15%;
+				}
 			}
 
 			.left-img-3 {
 				top: 55%;
 				left: 35%;
+
+				@media (max-width: 1000px) {
+					left: 25%;
+				}
 			}
 		}
 
@@ -47,6 +71,11 @@
 			right: -50vw;
 			@include flexLayout;
 			transition: right .8s cubic-bezier(1, 0, 0, 1);
+
+			@media (max-width: 800px) {
+				width: 100vw;
+				right: -100vw;
+			}
 
 			.nav-list {
 				&-item {
@@ -65,6 +94,10 @@
 					&:hover {
 						color: $color-primary;
 						letter-spacing: 4px;
+					}
+
+					@media (max-width: 600px) {
+						font-size: 40px;
 					}
 				}
 			}
